--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/library_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/library_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=root
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.datasource.url=jdbc:h2:file:/data/demo - turning a db into a file-based storage
+
